fixed some issue with overflow

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -90,11 +90,8 @@ p:nth-child(4){
 }
 
 @media (max-width: 800px){
-  body{
-    overflow-x: hidden;
-  }
-
   nav {
+    overflow-x: hidden;
     position: relative;
   }
 
@@ -121,10 +118,27 @@ p:nth-child(4){
     cursor: pointer;
   }
 
-  .nav-active {
+  .nav-container-active {
     overflow-x: visible;
+  }
+
+  .nav-active {
     transform: translateX(0%);
   }
 
   
+}
+
+/* ANIMATION */
+
+@keyframes navLinkFade {
+  from{
+    opacity: 0;
+    transform: translateX(50px)
+  }
+
+  to{
+    opacity: 1;
+    transform: translateX(0px);
+  }
 }
